--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdx-docs",
+  "name": "nuxt-mdx-poc",
   "version": "1.0.0",
   "description": "My breathtaking Nuxt.js project",
   "author": "codebender828",
